raffia/tests/error/sass/scss-as-sass.snap
---
source: raffia/tests/error.rs
---
error: CSS rule is expected
  ┌─ scss-as-sass.sass:1:22
  │
1 │ @mixin button-base() {
  │                      ^


